--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "espress": "^0.0.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "query": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
