--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-HOST=127.0.0.1
-PORT=3000
+HOST_BE=127.0.0.1
+PORT_BE=3000
+
+HOST_FE=http://localhost
+PORT_FE=5173
+
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
